# elza-prompt-hub

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  wordbank-example.yaml  wordbank.yaml
js/: elza_prompt_hub.js
