[project]
name = "elza-prompt-hub"
description = "多栏预设词切换节点，支持 {a|b} 和 {N$$ a|b|c} 随机词语法"
version = "1.0.0"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/user/elza-prompt-hub"

[tool.comfy]
PublisherId = "elza"
DisplayName = "Elza Prompt Hub"
Icon = ""
