[project]
name = "elza-prompt-hub"
description = "Elza 的 ComfyUI 自定义节点集：多栏预设词切换 + 词库管理"
version = "1.1.0"
license = { text = "CC BY-NC 4.0" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/BNUZ-HuSir/elza-prompt-hub"

[tool.comfy]
PublisherId = "elza"
DisplayName = "Elza Prompt Hub"
Icon = ""
